rework sign up pages to mimic V3 more closely and add clear marking of mandatory vs optional fields. Integrate some of the old help as mouse-over tooltip. Generally hide announcement 'hack' on narrow (staticpage) pages to avoid title overflow. Polish text in line with feedback for SIF intro leaflet. Update extcert page with country guess based on cert.
git-svn-id: svn+ssh://svn.code.sf.net/p/migrid/code/trunk@4746 b75ad72c-e7d7-11dd-a971-7dbc132099af

--- a/mig/images/css/jquery.managers.css
+++ b/mig/images/css/jquery.managers.css
@@ -1057,6 +1057,25 @@ background: url(/images/icons/code.png) left center no-repeat;
     vertical-align: middle;
 }
 
+/* V2 Account request form */
+/* form with field grid */
+#account-request-grid .form-row {
+    display: grid;
+    grid-gap: 10px;
+    grid-template-columns: repeat(auto-fill, 32%);
+    margin: 10px 0px;
+}
+#account-request-grid .form-row.single-entry {
+    grid-template-columns: repeat(auto-fill, 98%);
+}
+#account-request-grid .form-row .single-entry .form-cell{
+    width: 98%;
+    display: block;
+}
+#account-request-grid .form-row select {
+    width: 100%;
+}
+
 /* Tips in Home page below apps */
 #tips-container {
     width: auto;
